--- a/src/TinyBeanVM/TinyBeanVMMachineCLI/TinyBeanVMMachineCLI.csproj
+++ b/src/TinyBeanVM/TinyBeanVMMachineCLI/TinyBeanVMMachineCLI.csproj
@@ -23,7 +23,7 @@
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <StartAction>Project</StartAction>
-    <StartArguments>pie.tb</StartArguments>
+    <StartArguments>out.tb -disassemble</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <OutputPath>bin\Release\</OutputPath>
